--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>💖 Nishit's Personal Site</title>
+  <!--- link for css file --->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
   <table cellspacing = "20">
     <tr>
@@ -15,8 +15,6 @@
       <p>I am learning Web Development.💖</p></td>
     </tr>
   </table>
-
-
   <hr>
   <h3>Education</h3>
   <ul>
@@ -127,14 +125,10 @@
       </td>
     </tr>
   </table>
-
-
-
   <hr>
   <a href="hobbies.html">My Hobbies</a>
   <br />
   <br />
   <a href="contact.html">Contact Details</a>
 </body>
-
 </html>
